Avoid overflow for article

--- a/src/assets/page.less
+++ b/src/assets/page.less
@@ -54,7 +54,11 @@ p {
     font-size: 18px;
 }
 
-article,
+article {
+    display: block;
+    overflow: hidden;
+}
+
 aside,
 details,
 figcaption,
